Generated/GLSLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ./CourseWork/Grammar/GLSLParser.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class GLSLParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		CONST=1, IN=2, OUT=3, INOUT=4, UNIFORM=5, BUFFER=6, READONLY=7, STRUCT=8, 
		VOID=9, BOOL=10, INT=11, UINT=12, FLOAT=13, DOUBLE=14, VEC2=15, VEC3=16, 
		VEC4=17, DVEC2=18, DVEC3=19, DVEC4=20, TRUE=21, FALSE=22, IF=23, ELSE=24, 
		SWITCH=25, CASE=26, DEFAULT=27, WHILE=28, DO=29, FOR=30, BREAK=31, CONTINUE=32, 
		RETURN=33, DISCARD=34, PLUS=35, DASH=36, STAR=37, SLASH=38, PERCENT=39, 
		INC_OP=40, DEC_OP=41, ASSIGN=42, ADD_ASSIGN=43, SUB_ASSIGN=44, MUL_ASSIGN=45, 
		DIV_ASSIGN=46, MOD_ASSIGN=47, AND_ASSIGN=48, OR_ASSIGN=49, XOR_ASSIGN=50, 
		LEFT_ASSIGN=51, RIGHT_ASSIGN=52, EQ_OP=53, NE_OP=54, LE_OP=55, GE_OP=56, 
		LEFT_OP=57, RIGHT_OP=58, AND_OP=59, OR_OP=60, XOR_OP=61, AMPERSAND=62, 
		VERTICAL_BAR=63, CARET=64, BANG=65, TILDE=66, QUESTION=67, COLON=68, COMMA=69, 
		SEMICOLON=70, DOT=71, LEFT_PAREN=72, RIGHT_PAREN=73, LEFT_BRACKET=74, 
		RIGHT_BRACKET=75, LEFT_BRACE=76, RIGHT_BRACE=77, LEFT_ANGLE=78, RIGHT_ANGLE=79, 
		INT_CONST=80, UINT_CONST=81, FLOAT_CONST=82, DOUBLE_CONST=83, IDENTIFIER=84, 
		LINE_COMMENT=85, BLOCK_COMMENT=86, WS=87;
	public const int
		RULE_translation_unit = 0, RULE_external_declaration = 1, RULE_function_definition = 2, 
		RULE_function_parameters = 3, RULE_parameter_declaration = 4, RULE_type_qualifier = 5, 
		RULE_fully_specified_type = 6, RULE_type_specifier = 7, RULE_struct_specifier = 8, 
		RULE_struct_declaration_list = 9, RULE_struct_declaration = 10, RULE_struct_declarator_list = 11, 
		RULE_struct_declarator = 12, RULE_array_specifier = 13, RULE_declaration = 14, 
		RULE_init_declarator_list = 15, RULE_single_declaration = 16, RULE_typeless_declaration = 17, 
		RULE_initializer = 18, RULE_initializer_list = 19, RULE_expression = 20, 
		RULE_assignment_expression = 21, RULE_assignment_operator = 22, RULE_constant_expression = 23, 
		RULE_logical_or_expression = 24, RULE_logical_and_expression = 25, RULE_inclusive_or_expression = 26, 
		RULE_exclusive_or_expression = 27, RULE_and_expression = 28, RULE_equality_expression = 29, 
		RULE_relational_expression = 30, RULE_shift_expression = 31, RULE_additive_expression = 32, 
		RULE_multiplicative_expression = 33, RULE_unary_expression = 34, RULE_unary_operator = 35, 
		RULE_postfix_expression = 36, RULE_field_selection = 37, RULE_function_call = 38, 
		RULE_function_call_parameters = 39, RULE_primary_expression = 40, RULE_statement = 41, 
		RULE_simple_statement = 42, RULE_declaration_statement = 43, RULE_expression_statement = 44, 
		RULE_compound_statement = 45, RULE_selection_statement = 46, RULE_condition = 47, 
		RULE_switch_statement = 48, RULE_case_label = 49, RULE_iteration_statement = 50, 
		RULE_for_init_statement = 51, RULE_for_rest_statement = 52, RULE_jump_statement = 53;
	public static readonly string[] ruleNames = {
		"translation_unit", "external_declaration", "function_definition", "function_parameters", 
		"parameter_declaration", "type_qualifier", "fully_specified_type", "type_specifier", 
		"struct_specifier", "struct_declaration_list", "struct_declaration", "struct_declarator_list", 
		"struct_declarator", "array_specifier", "declaration", "init_declarator_list", 
		"single_declaration", "typeless_declaration", "initializer", "initializer_list", 
		"expression", "assignment_expression", "assignment_operator", "constant_expression", 
		"logical_or_expression", "logical_and_expression", "inclusive_or_expression", 
		"exclusive_or_expression", "and_expression", "equality_expression", "relational_expression", 
		"shift_expression", "additive_expression", "multiplicative_expression", 
		"unary_expression", "unary_operator", "postfix_expression", "field_selection", 
		"function_call", "function_call_parameters", "primary_expression", "statement", 
		"simple_statement", "declaration_statement", "expression_statement", "compound_statement", 
		"selection_statement", "condition", "switch_statement", "case_label", 
		"iteration_statement", "for_init_statement", "for_rest_statement", "jump_statement"
	};

	private static readonly string[] _LiteralNames = {
		null, "'const'", "'in'", "'out'", "'inout'", "'uniform'", "'buffer'", 
		"'readonly'", "'struct'", "'void'", "'bool'", "'int'", "'uint'", "'float'", 
		"'double'", "'vec2'", "'vec3'", "'vec4'", "'dvec2'", "'dvec3'", "'dvec4'", 
		"'true'", "'false'", "'if'", "'else'", "'switch'", "'case'", "'default'", 
		"'while'", "'do'", "'for'", "'break'", "'continue'", "'return'", "'discard'", 
		"'+'", "'-'", "'*'", "'/'", "'%'", "'++'", "'--'", "'='", "'+='", "'-='", 
		"'*='", "'/='", "'%='", "'&='", "'|='", "'^='", "'<<='", "'>>='", "'=='", 
		"'!='", "'<='", "'>='", "'<<'", "'>>'", "'&&'", "'||'", "'^^'", "'&'", 
		"'|'", "'^'", "'!'", "'~'", "'?'", "':'", "','", "';'", "'.'", "'('", 
		"')'", "'['", "']'", "'{'", "'}'", "'<'", "'>'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "CONST", "IN", "OUT", "INOUT", "UNIFORM", "BUFFER", "READONLY", 
		"STRUCT", "VOID", "BOOL", "INT", "UINT", "FLOAT", "DOUBLE", "VEC2", "VEC3", 
		"VEC4", "DVEC2", "DVEC3", "DVEC4", "TRUE", "FALSE", "IF", "ELSE", "SWITCH", 
		"CASE", "DEFAULT", "WHILE", "DO", "FOR", "BREAK", "CONTINUE", "RETURN", 
		"DISCARD", "PLUS", "DASH", "STAR", "SLASH", "PERCENT", "INC_OP", "DEC_OP", 
		"ASSIGN", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", 
		"AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN", "LEFT_ASSIGN", "RIGHT_ASSIGN", 
		"EQ_OP", "NE_OP", "LE_OP", "GE_OP", "LEFT_OP", "RIGHT_OP", "AND_OP", "OR_OP", 
		"XOR_OP", "AMPERSAND", "VERTICAL_BAR", "CARET", "BANG", "TILDE", "QUESTION", 
		"COLON", "COMMA", "SEMICOLON", "DOT", "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACKET", 
		"RIGHT_BRACKET", "LEFT_BRACE", "RIGHT_BRACE", "LEFT_ANGLE", "RIGHT_ANGLE", 
		"INT_CONST", "UINT_CONST", "FLOAT_CONST", "DOUBLE_CONST", "IDENTIFIER", 
		"LINE_COMMENT", "BLOCK_COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "GLSLParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static GLSLParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GLSLParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GLSLParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Translation_unitContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public External_declarationContext[] external_declaration() {
			return GetRuleContexts<External_declarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public External_declarationContext external_declaration(int i) {
			return GetRuleContext<External_declarationContext>(i);
		}
		public Translation_unitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_translation_unit; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGLSLParserListener typedListener = listener as IGLSLParserListener;
			if (typedListener != null) typedListener.EnterTranslation_unit(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGLSLParserListener typedListener = listener as IGLSLParserListener;
			if (typedListener != null) typedListener.ExitTranslation_unit(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGLSLParserVisitor<TResult> typedVisitor = visitor as IGLSLParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTranslation_unit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Translation_unitContext translation_unit() {
		Translation_unitContext _localctx = new Translation_unitContext(Context, State);
		EnterRule(_localctx, 0, RULE_translation_unit);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2097150L) != 0) || _la==SEMICOLON || _la==IDENTIFIER) {
				{
				{
				State = 108;
				external_declaration();
				}
				}
				State = 113;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class External_declarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Function_definitionContext function_definition() {
			return GetRuleContext<Function_definitionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext declaration() {
			return GetRuleContext<DeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(GLSLParser.SEMICOLON, 0); }
		public External_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_external_declaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGLSLParserListener typedListener = listener as IGLSLParserListener;
			if (typedListener != null) typedListener.EnterExternal_declaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGLSLParserListener typedListener = listener as IGLSLParserListener;
			if (typedListener != null) typedListener.ExitExternal_declaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGLSLParserVisitor<TResult> typedVisitor = visitor as IGLSLParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExternal_declaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public External_declarationContext external_declaration() {
		External_declarationContext _localctx = new External_declarationContext(Context, State);
		EnterRule(_localctx, 2, RULE_external_declaration);
		try {
			State = 117;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 114;
				function_definition();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 115;
				declaration();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 116;
				Match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Function_definitionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Fully_specified_typeContext fully_specified_type() {
			return GetRuleContext<Fully_specified_typeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(GLSLParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LEFT_PAREN() { return GetToken(GLSLParser.LEFT_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RIGHT_PAREN() { return GetToken(GLSLParser.RIGHT_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Compound_statementContext compound_statement() {
			return GetRuleContext<Compound_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Function_parametersContext function_parameters() {
			return GetRuleContext<Function_parametersContext>(0);
		}
		public Function_definitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function_definition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGLSLParserListener typedListener = listener as IGLSLParserListener;
			if (typedListener != null) typedListener.EnterFunction_definition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGLSLParserListener typedListener = listener as IGLSLParserListener;
			if (typedListener != null) typedListener.ExitFunction_definition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGLSLParserVisitor<TResult> typedVisitor = visitor as IGLSLParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunction_definition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Function_definitionContext function_definition() {
		Function_definitionContext _localctx = new Function_definitionContext(Context, State);
		EnterRule(_localctx, 4, RULE_function_definition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119;
			fully_specified_type();
			State = 120;
			Match(IDENTIFIER);
			State = 121;
			Match(LEFT_PAREN);
			State = 123;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2097150L) != 0) || _la==IDENTIFIER) {
				{
				State = 122;
				function_parameters();
				}
			}

			State = 125;
			Match(RIGHT_PAREN);
			State = 126;
			compound_statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Function_parametersContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Parameter_declarationContext[] parameter_declaration() {
			return GetRuleContexts<Parameter_declarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Parameter_declarationContext parameter_declaration(int i) {
			return GetRuleContext<Parameter_declarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(GLSLParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(GLSLParser.COMMA, i);
		}
		public Function_parametersContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function_parameters; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGLSLParserListener typedListener = listener as IGLSLParserListener;
			if (typedListener != null) typedListener.EnterFunction_parameters(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGLSLParserListener typedListener = listener as IGLSLParserListener;
			if (typedListener != null) typedListener.ExitFunction_parameters(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGLSLParserVisitor<TResult> typedVisitor = visitor as IGLSLParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunction_parameters(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Function_parametersContext function_parameters() {
		Function_parametersContext _localctx = new Function_parametersContext(Context, State);
		EnterRule(_localctx, 6, RULE_function_parameters);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 128;
			parameter_declaration();
			State = 133;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 129;
				Match(COMMA);
				State = 130;
				parameter_declaration();
				}
				}
				State = 135;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Parameter_declarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Fully_specified_typeContext fully_specified_type() {
			return GetRuleContext<Fully_specified_typeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Type_qualifierContext type_qualifier() {
			return GetRuleContext<Type_qualifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(GLSLParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Array_specifierContext array_specifier() {
			return GetRuleContext<Array_specifierContext>(0);
		}
		public Parameter_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parameter_declaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGLSLParserListener typedListener = listener as IGLSLParserListener;
			if (typedListener != null) typedListener.EnterParameter_declaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGLSLParserListener typedListener = listener as IGLSLParserListener;
			if (typedListener != null) typedListener.ExitParameter_declaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGLSLParserVisitor<TResult> typedVisitor = visitor as IGLSLParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParameter_declaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Parameter_declarationContext parameter_declaration() {
		Parameter_declarationContext _localctx = new Parameter_declarationContext(Context, State);
		EnterRule(_localctx, 8, RULE_parameter_declaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 137;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				{
				State = 136;
				type_qualifier();
				}
				break;
			}
			State = 139;
			fully_specified_type();
			State = 144;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==IDENTIFIER) {
				{
				State = 140;
				Match(IDENTIFIER);
				State = 142;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==LEFT_BRACKET) {
					{
					State = 141;
					array_specifier();
					}
				}

				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Type_qualifierContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CONST() { return GetToken(GLSLParser.CONST, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IN() { return GetToken(GLSLParser.IN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OUT() { return GetToken(GLSLParser.OUT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INOUT() { return GetToken(GLSLParser.INOUT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UNIFORM() { return GetToken(GLSLParser.UNIFORM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BUFFER() { return GetToken(GLSLParser.BUFFER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode READONLY() { return GetToken(GLSLParser.READONLY, 0); }
		public Type_qualifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type_qualifier; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGLSLParserListener typedListener = listener as IGLSLParserListener;
			if (typedListener != null) typedListener.EnterType_qualifier(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGLSLParserListener typedListener = listener as IGLSLParserListener;
			if (typedListener != null) typedListener.ExitType_qualifier(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGLSLParserVisitor<TResult> typedVisitor = visitor as IGLSLParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType_qualifier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Type_qualifierContext type_qualifier() {
		Type_qualifierContext _localctx = new Type_qualifierContext(Context, State);
		EnterRule(_localctx, 10, RULE_type_qualifier);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 146;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 254L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Fully_specified_typeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Type_specifierContext type_specifier() {
			return GetRuleContext<Type_specifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Type_qualifierContext[] type_qualifier() {
			return GetRuleContexts<Type_qualifierContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Type_qualifierContext type_qualifier(int i) {
			return GetRuleContext<Type_qualifierContext>(i);
		}
		public Fully_specified_typeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fully_specified_type; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGLSLParserListener typedListener = listener as IGLSLParserListener;
			if (typedListener != null) typedListener.EnterFully_specified_type(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGLSLParserListener typedListener = listener as IGLSLParserListener;
			if (typedListener != null) typedListener.ExitFully_specified_type(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGLSLParserVisitor<TResult> typedVisitor = visitor as IGLSLParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFully_specified_type(this);
			else return visitor.VisitChildren(this);
		}
	}
